--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 dotenvy = "0.15.7"
+env_logger = "0.10.0"
+futures = "0.3.28"
+image = "0.24.6"
 serde = "1.0.163"
 wgpu = "0.16.1"
