--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
+bytemuck = "1.13.1"
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 futures = "0.3.28"
