--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,21 +24,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: SSH into server and deploy
-       uses: appleboy/ssh-action@v0.4.0
+       uses: invi5H/ssh-action@v1
        with:
-         host: ${{ secrets.SERVER_HOST }}
-         username: ${{ secrets.SERVER_USERNAME }}
-         password: ${{ secrets.SERVER_PASSWORD }}
-         port: ${{ secrets.SERVER_PORT }}
-         script: |
-            cd ~/fractals_api/
-            git pull origin main
-            cargo build --release
-            cd target/release/
-            killall fractals-api
-            tmux new ./fractals-api
-     - name: Notify deployment status
-       if: ${{ success() }}
-       run: echo "Deployment successful!"
-
-    
+         SSH_HOST: ${{ secrets.SERVER_HOST }}
+         SSH_USER: ${{ secrets.SERVER_USERNAME }}
+         SSH_KEY: ${{ secrets.SERVER_KEY }}
+         SSH_PORT: ${{ secrets.SERVER_PORT }}
+     - run: ssh ${{ steps.ssh.outputs.SERVER }} ./deploy.sh   
