--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.10.0"
 futures = "0.3.28"
 image = "0.24.6"
 log = "0.4.18"
+regex = "1.8.4"
 serde = "1.0.163"
 serde_derive = "1.0.163"
 serde_json = "1.0.96"
